// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Accordion Component Should render Accordion 1`] = `
.c3 {
  vertical-align: middle;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  position: relative;
  overflow: visible;
  color: hsl(200,96%,11%);
  margin-right: 16px;
  font-size: 16px;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 8px);
  width: calc(100% + 8px);
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c2:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background: none;
  border: 2px transparent;
  outline: none;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c1 p,
.c1 h1,
.c1 h2,
.c1 h3,
.c1 h4 {
  margin: 0;
}

.c1.outline-variant {
  padding-left: 16px;
  padding-right: 16px;
}

.c1.outline-variant.is-open {
  border-bottom: 1px solid;
  border-color: hsl(200,29%,90%);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  border-bottom: 1px solid;
  border-color: hsl(200,29%,90%);
}

.c0.box-shadow {
  border: 0px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c0:first-of-type {
  border-top: 1px solid hsl(200,29%,90%);
}

<div>
  <div
    class="c0 "
    id="accordion"
  >
    <div
      class="c1  "
      id="accordion-header"
    >
      <button
        aria-controls="accordion-body"
        aria-expanded="false"
        aria-labelledby="accordion-header"
        class="c2"
        data-role="accordion-button"
        role="button"
        type="button"
        variant="standard"
      >
        <svg
          aria-hidden="true"
          class="c3"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="matrix(-1 0 0 1 24 0)"
          />
        </svg>
      </button>
      <h3
        class=""
      >
        Test Header
      </h3>
    </div>
  </div>
</div>
`;

exports[`component: Accordion Component Should render outline accordion 1`] = `
.c4 {
  vertical-align: middle;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  position: relative;
  overflow: visible;
  color: hsl(200,96%,11%);
  margin-right: 16px;
  font-size: 16px;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 8px);
  width: calc(100% + 8px);
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c3:hover {
  color: hsl(200,96%,35%);
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background: none;
  border: 2px transparent;
  outline: none;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2 p,
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4 {
  margin: 0;
}

.c2.outline-variant {
  padding-left: 16px;
  padding-right: 16px;
}

.c2.outline-variant.is-open {
  border-bottom: 1px solid;
  border-color: hsl(200,29%,90%);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  border: 1px solid;
  border-color: hsl(200,29%,90%);
  border-radius: 4px;
}

.c1.box-shadow {
  border: 0px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c0 + .c0 {
  margin-top: 8px;
}

<div>
  <div
    class="c0 c1 "
    id="accordion"
  >
    <div
      class="c2 outline-variant "
      id="accordion-header"
    >
      <button
        aria-controls="accordion-body"
        aria-expanded="false"
        aria-labelledby="accordion-header"
        class="c3"
        data-role="accordion-button"
        role="button"
        type="button"
        variant="standard"
      >
        <svg
          aria-hidden="true"
          class="c4"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="matrix(-1 0 0 1 24 0)"
          />
        </svg>
      </button>
      <h3
        class=""
      >
        Test Header
      </h3>
    </div>
  </div>
</div>
`;

exports[`component: Accordion with theme customization outline accordion should have 1px border-radius 1`] = `
<DocumentFragment>
  .c4 {
  vertical-align: middle;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  position: relative;
  overflow: visible;
  color: hsl(200,96%,11%);
  margin-right: 16px;
  font-size: 16px;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 8px);
  width: calc(100% + 8px);
  border: 1px solid;
  border-radius: 1px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c3:hover {
  color: hsl(200,96%,35%);
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background: none;
  border: 2px transparent;
  outline: none;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2 p,
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4 {
  margin: 0;
}

.c2.outline-variant {
  padding-left: 16px;
  padding-right: 16px;
}

.c2.outline-variant.is-open {
  border-bottom: 1px solid;
  border-color: hsl(200,29%,90%);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  border: 1px solid;
  border-color: hsl(200,29%,90%);
  border-radius: 1px;
}

.c1.box-shadow {
  border: 0px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c0 + .c0 {
  margin-top: 8px;
}

<div
    class="c0 c1 "
    id="accordion"
  >
    <div
      class="c2 outline-variant "
      id="accordion-header"
    >
      <button
        aria-controls="accordion-body"
        aria-expanded="false"
        aria-labelledby="accordion-header"
        class="c3"
        data-role="accordion-button"
        role="button"
        type="button"
        variant="standard"
      >
        <svg
          aria-hidden="true"
          class="c4"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="matrix(-1 0 0 1 24 0)"
          />
        </svg>
      </button>
      <h3
        class=""
      >
        Test Header
      </h3>
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: Accordion with theme customization outline accordion should have 2px border 1`] = `
<DocumentFragment>
  .c4 {
  vertical-align: middle;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  position: relative;
  overflow: visible;
  color: hsl(200,96%,11%);
  margin-right: 16px;
  font-size: 16px;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 8px);
  width: calc(100% + 8px);
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c3:hover {
  color: hsl(200,96%,35%);
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background: none;
  border: 2px transparent;
  outline: none;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2 p,
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4 {
  margin: 0;
}

.c2.outline-variant {
  padding-left: 16px;
  padding-right: 16px;
}

.c2.outline-variant.is-open {
  border-bottom: 2px solid;
  border-color: hsl(200,29%,90%);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  border: 2px solid;
  border-color: hsl(200,29%,90%);
  border-radius: 4px;
}

.c1.box-shadow {
  border: 0px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c0 + .c0 {
  margin-top: 8px;
}

<div
    class="c0 c1 "
    id="accordion"
  >
    <div
      class="c2 outline-variant "
      id="accordion-header"
    >
      <button
        aria-controls="accordion-body"
        aria-expanded="false"
        aria-labelledby="accordion-header"
        class="c3"
        data-role="accordion-button"
        role="button"
        type="button"
        variant="standard"
      >
        <svg
          aria-hidden="true"
          class="c4"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="matrix(-1 0 0 1 24 0)"
          />
        </svg>
      </button>
      <h3
        class=""
      >
        Test Header
      </h3>
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: Accordion with theme customization outline accordion should have 4px border-radius 1`] = `
<DocumentFragment>
  .c4 {
  vertical-align: middle;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  position: relative;
  overflow: visible;
  color: hsl(200,96%,11%);
  margin-right: 16px;
  font-size: 16px;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 8px);
  width: calc(100% + 8px);
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c3:hover {
  color: hsl(200,96%,35%);
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background: none;
  border: 2px transparent;
  outline: none;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2 p,
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4 {
  margin: 0;
}

.c2.outline-variant {
  padding-left: 16px;
  padding-right: 16px;
}

.c2.outline-variant.is-open {
  border-bottom: 1px solid;
  border-color: hsl(200,29%,90%);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  border: 1px solid;
  border-color: hsl(200,29%,90%);
  border-radius: 4px;
}

.c1.box-shadow {
  border: 0px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c0 + .c0 {
  margin-top: 8px;
}

<div
    class="c0 c1 "
    id="accordion"
  >
    <div
      class="c2 outline-variant "
      id="accordion-header"
    >
      <button
        aria-controls="accordion-body"
        aria-expanded="false"
        aria-labelledby="accordion-header"
        class="c3"
        data-role="accordion-button"
        role="button"
        type="button"
        variant="standard"
      >
        <svg
          aria-hidden="true"
          class="c4"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="matrix(-1 0 0 1 24 0)"
          />
        </svg>
      </button>
      <h3
        class=""
      >
        Test Header
      </h3>
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: Accordion with theme customization outline accordion should not have box shadows when open 1`] = `
<DocumentFragment>
  .c4 {
  vertical-align: middle;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  position: relative;
  overflow: visible;
  color: hsl(200,96%,11%);
  margin-right: 16px;
  font-size: 16px;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 8px);
  width: calc(100% + 8px);
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c3:hover {
  color: hsl(200,96%,35%);
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background: none;
  border: 2px transparent;
  outline: none;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2 p,
.c2 h1,
.c2 h2,
.c2 h3,
.c2 h4 {
  margin: 0;
}

.c2.outline-variant {
  padding-left: 16px;
  padding-right: 16px;
}

.c2.outline-variant.is-open {
  border-bottom: 1px solid;
  border-color: hsl(200,29%,90%);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  border: 1px solid;
  border-color: hsl(200,29%,90%);
  border-radius: 4px;
}

.c0 + .c0 {
  margin-top: 8px;
}

<div
    class="c0 c1 "
    id="accordion"
  >
    <div
      class="c2 outline-variant "
      id="accordion-header"
    >
      <button
        aria-controls="accordion-body"
        aria-expanded="false"
        aria-labelledby="accordion-header"
        class="c3"
        data-role="accordion-button"
        role="button"
        type="button"
        variant="standard"
      >
        <svg
          aria-hidden="true"
          class="c4"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="matrix(-1 0 0 1 24 0)"
          />
        </svg>
      </button>
      <h3
        class=""
      >
        Test Header
      </h3>
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: Accordion with theme customization simple accordion should have 2px border 1`] = `
<DocumentFragment>
  .c3 {
  vertical-align: middle;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  position: relative;
  overflow: visible;
  color: hsl(200,96%,11%);
  margin-right: 16px;
  font-size: 16px;
}

.c2::-moz-focus-inner {
  border: 0;
}

.c2:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 8px);
  width: calc(100% + 8px);
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c2:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  min-height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background: none;
  border: 2px transparent;
  outline: none;
}

.c1::-moz-focus-inner {
  border: 0;
}

.c1 p,
.c1 h1,
.c1 h2,
.c1 h3,
.c1 h4 {
  margin: 0;
}

.c1.outline-variant {
  padding-left: 16px;
  padding-right: 16px;
}

.c1.outline-variant.is-open {
  border-bottom: 2px solid;
  border-color: hsl(200,29%,90%);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  border-bottom: 2px solid;
  border-color: hsl(200,29%,90%);
}

.c0.box-shadow {
  border: 0px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c0:first-of-type {
  border-top: 2px solid hsl(200,29%,90%);
}

<div
    class="c0 "
    id="accordion"
  >
    <div
      class="c1  "
      id="accordion-header"
    >
      <button
        aria-controls="accordion-body"
        aria-expanded="false"
        aria-labelledby="accordion-header"
        class="c2"
        data-role="accordion-button"
        role="button"
        type="button"
        variant="standard"
      >
        <svg
          aria-hidden="true"
          class="c3"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
            transform="matrix(-1 0 0 1 24 0)"
          />
        </svg>
      </button>
      <h3
        class=""
      >
        Test Header
      </h3>
    </div>
  </div>
</DocumentFragment>
`;
